--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "joi": "^17.13.3",
     "mongoose": "^8.16.1",
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "redis": "^5.6.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
