--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "qs": "^6.14.0",
-    "redis": "^5.6.0"
+    "redis": "^5.6.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
