--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "nodemailer": "^7.0.5",
     "qs": "^6.14.0",
     "redis": "^5.6.0",
     "validator": "^13.15.15"
